max-width used to prevent X scroll bar and jumping of layouts

--- a/src/app.css
+++ b/src/app.css
@@ -11,6 +11,7 @@
 body {
 	/*keeps footer at bottom*/
 	min-height: 100vh;
+	max-width: 100vw;
 	display: flex;
 	flex-direction: column;
 	margin: 0px ;
